[package]
name = "rsql_builder"
version = "0.1.5"
authors = ["heqingpan <heqingpan@126.com>"]
license = "MIT/Apache-2.0"
description = "sql builder utils"
readme = "README.md"
repository = "https://gitee.com/hqp/rsql_builder"
keywords = ["database", "sql","utils"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
